--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="fashionlife.com.ui.home.ContainerActivity">
+    tools:context="fashionlife.com.ui.home.activity.ContainerActivity">
 
     <FrameLayout
         android:id="@+id/container"
