--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,13 +4,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="HOME" />
-
-    <ImageView
-        android:id="@+id/iv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+   <xu.viewpagerflextitle.ViewPagerTitle
+       android:id="@+id/view_pager_title"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"/>
+   <android.support.v4.view.ViewPager
+       android:id="@+id/view_pager"
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="1"></android.support.v4.view.ViewPager>
 </LinearLayout>
