--- a/app/src/main/res/layout/fragment_wx_news_layout.xml
+++ b/app/src/main/res/layout/fragment_wx_news_layout.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <fashionlife.com.base.ui.BaseListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"></fashionlife.com.base.ui.BaseListView>
+        android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>
+
 </LinearLayout>
