优化调整布局

--- a/app/src/main/res/layout/fragment_wx_news_layout.xml
+++ b/app/src/main/res/layout/fragment_wx_news_layout.xml
@@ -7,6 +7,7 @@
     <fashionlife.com.base.ui.BaseListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
+        android:listSelector="@android:color/transparent"
         android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>
 
 </LinearLayout>
