--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
    <xu.viewpagerflextitle.ViewPagerTitle
        android:id="@+id/view_pager_title"
        android:layout_width="match_parent"
+       app:background_content_color="@color/c_fafafa"
        android:layout_height="wrap_content"/>
    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
-       android:layout_weight="1"></android.support.v4.view.ViewPager>
+       android:layout_weight="1"/>
 </LinearLayout>
