--- a/app/src/main/res/layout/item_wx_news_layout.xml
+++ b/app/src/main/res/layout/item_wx_news_layout.xml
@@ -2,7 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    android:background="@drawable/listview_bg"
+    android:padding="10dp">
 
     <TextView
         android:id="@+id/item_wx_news_tv_title"
@@ -16,5 +18,6 @@
         android:id="@+id/item_wx_news_iv"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:layout_marginLeft="10dp"
         android:scaleType="center" />
 </LinearLayout>
