--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="c_666">#666666</color>
     <color name="c_0a0a0a">#0a0a0a</color>
     <color name="c_f6f6f6">#f6f6f6</color>
+    <color name="c_fafafa">#fafafa</color>
+    <color name="c_f1f1f1">#f1f1f1</color>
+    <color name="c_transparent">#00000000</color>
+    <color name="c_e1e1e1">#e1e1e1</color>
 
 </resources>
