--- a/app/src/main/res/layout/fragment_wx_news_layout.xml
+++ b/app/src/main/res/layout/fragment_wx_news_layout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/pull_to_refresh"
     android:orientation="vertical">
 
     <fashionlife.com.base.ui.BaseListView
@@ -10,4 +12,4 @@
         android:listSelector="@android:color/transparent"
         android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>
 
-</LinearLayout>
+</com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
