--- a/app/src/main/res/layout/fragment_wx_news_layout.xml
+++ b/app/src/main/res/layout/fragment_wx_news_layout.xml
@@ -6,10 +6,14 @@
     android:id="@+id/pull_to_refresh"
     android:orientation="vertical">
 
-    <fashionlife.com.base.ui.BaseListView
+  <!--  <fashionlife.com.base.ui.BaseListView
         android:id="@+id/lv"
         android:layout_width="match_parent"
         android:listSelector="@android:color/transparent"
-        android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>
+        android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>-->
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
 
 </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
