天气页面、重命名

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,24 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="txt_13sp" >13sp</dimen>
+    <dimen name="txt_14sp" >14sp</dimen>
+    <dimen name="txt_15sp" >15sp</dimen>
+    <dimen name="txt_16sp" >16sp</dimen>
+    <dimen name="txt_17sp" >17sp</dimen>
+    <dimen name="txt_18sp" >18sp</dimen>
+    <dimen name="txt_19sp" >19sp</dimen>
+    <dimen name="txt_20sp" >20sp</dimen>
+    <dimen name="txt_21sp" >22sp</dimen>
+    <dimen name="txt_23sp" >23sp</dimen>
+    <dimen name="txt_24sp" >24sp</dimen>
+    <dimen name="txt_25sp" >25sp</dimen>
+    <dimen name="txt_26sp" >26sp</dimen>
+
+    <dimen name="dip10">10dp</dimen>
+    <dimen name="dip5">5dp</dimen>
+    <dimen name="dip2">2dp</dimen>
+    <dimen name="dip8">8dp</dimen>
+    <dimen name="dip20">20dp</dimen>
+    <dimen name="dip15">15dp</dimen>
 </resources>
