--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,9 @@
     <color name="c_f1f1f1">#f1f1f1</color>
     <color name="c_transparent">#00000000</color>
     <color name="c_e1e1e1">#e1e1e1</color>
+    <color name="c_6EA9D0">#6EA9D0</color>
+    <color name="c_FFFFFF">#FFFFFF</color>
+    <color name="c_4E83A9">#4E83A9</color>
+    <color name="c_ECC350">#ECC350</color>
 
 </resources>
