--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,8 @@
     <color name="c_FFFFFF">#FFFFFF</color>
     <color name="c_4E83A9">#4E83A9</color>
     <color name="c_ECC350">#ECC350</color>
+    <color name="orange">#f87c32</color>
+    <color name="yellow">#fff2e400</color>
+    <color name="white">#ffffff</color>
 
 </resources>
