--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,5 @@
     <dimen name="dip8">8dp</dimen>
     <dimen name="dip20">20dp</dimen>
     <dimen name="dip15">15dp</dimen>
+    <dimen name="dip200">200dp</dimen>
 </resources>
