--- a/app/src/main/res/drawable/rectangle_4E83A9.xml
+++ b/app/src/main/res/drawable/rectangle_4E83A9.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="@dimen/dip5" />
-    <solid android:color="@color/c_4E83A9" />
+    <solid android:color="#30000000" />
 </shape>
