--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -6,9 +6,12 @@
     android:orientation="vertical"
     android:scrollbars="none">
 
+
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:paddingTop="@dimen/dip_tool_bar">
+
         <ImageView
             android:id="@+id/iv_bg"
             android:layout_width="match_parent"
