--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,6 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
     </style>
 
     <style name="view_line">
@@ -47,6 +44,11 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/c_FFFFFF</item>
         <item name="android:textSize">@dimen/txt_16sp</item>
+    </style>
+
+    <style name="default_tool_bar">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">@dimen/dip_tool_bar</item>
     </style>
 
 </resources>
