今天的最后提交，睡了。

--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -197,6 +197,7 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentBottom="true"
                     android:layout_marginTop="@dimen/dip200"
+                    android:background="@color/c_60000000"
                     android:paddingBottom="20dp"
                     android:paddingTop="20dp" />
             </HorizontalScrollView>
