--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,5 +18,7 @@
     <color name="orange">#f87c32</color>
     <color name="yellow">#fff2e400</color>
     <color name="white">#ffffff</color>
+    <color name="c_30000000">#30000000</color>
+    <color name="c_60000000">#60000000</color>
 
 </resources>
