--- a/app/src/main/res/layout/activity_container.xml
+++ b/app/src/main/res/layout/activity_container.xml
@@ -19,11 +19,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:visibility="gone"
         android:orientation="horizontal">
 
         <RadioButton
             android:id="@+id/home"
             style="@style/activity_container_bottom_home"
+            android:background="@drawable/home_rg"
+            android:button="@null"
             android:layout_gravity="center"
             android:text="@string/home" />
 
@@ -38,4 +41,9 @@
             android:text="@string/user" />
     </RadioGroup>
 
+    <fashionlife.com.widget.BottomTabWidget
+        android:id="@+id/bottom_tab_view"
+        android:layout_width="match_parent"
+        android:background="@color/c_f5f5f5"
+        android:layout_height="45dp"></fashionlife.com.widget.BottomTabWidget>
 </LinearLayout>
