--- a/app/src/main/res/layout/test_item_layout.xml
+++ b/app/src/main/res/layout/test_item_layout.xml
@@ -1,28 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="50dp"
     android:orientation="horizontal">
 
 
-    <TextView
-        android:id="@+id/textView"
-        android:textSize="16sp"
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+    <include
+        layout="@layout/bottom_item_layout"/>
 
     <View
-        android:layout_width="30dp"
-        android:background="@color/colorAccent"
-        android:layout_height="match_parent"/>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:textSize="16sp"
         android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:text="TextView" />
+        android:background="@color/c_4E83A9"
+        android:layout_height="match_parent"/>
+
+    <View
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:background="@color/c_ECC350"
+        android:layout_height="match_parent"/>
 </LinearLayout>
