--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
     <color name="white">#ffffff</color>
     <color name="c_30000000">#30000000</color>
     <color name="c_60000000">#60000000</color>
+    <color name="c_f5f5f5">#f5f5f5</color>
 
 </resources>
