--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,5 +21,9 @@
     <color name="c_30000000">#30000000</color>
     <color name="c_60000000">#60000000</color>
     <color name="c_f5f5f5">#f5f5f5</color>
+    <color name="c_0070FB">#0070FB</color>
+    <color name="c_6E6E6E">#6E6E6E</color>
+    <color name="c_2e77fb">#2e77fb</color>
+    <color name="c_000000">#000000</color>
 
 </resources>
