--- a/app/src/main/res/layout/fragment_user_layout.xml
+++ b/app/src/main/res/layout/fragment_user_layout.xml
@@ -15,14 +15,43 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:scaleType="centerCrop"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text=""/>
+
+            <Button
+                android:id="@+id/selectImage"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="选择图片"
+                />
+
+            <Button
+                android:id="@+id/uploadImage"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="上传图片"
+                />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
+
     </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
-    </LinearLayout>
 
 
 </fashionlife.com.widget.HeadZoomScrollView>
