--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,5 +25,6 @@
     <color name="c_6E6E6E">#6E6E6E</color>
     <color name="c_2e77fb">#2e77fb</color>
     <color name="c_000000">#000000</color>
+    <color name="c_F5F8FA">#F5F8FA</color>
 
 </resources>
