--- a/app/src/main/res/drawable/listview_bg.xml
+++ b/app/src/main/res/drawable/listview_bg.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/c_f6f6f6" android:state_pressed="false"/>
+    <item android:drawable="@color/c_FFFFFF" android:state_pressed="false"/>
     <item android:drawable="@color/c_e1e1e1" android:state_pressed="true"/>
 
 </selector>
