--- a/app/src/main/res/layout/fragment_wx_news_layout.xml
+++ b/app/src/main/res/layout/fragment_wx_news_layout.xml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.jwenfeng.library.pulltorefresh.PullToRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/pull_to_refresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/pull_to_refresh"
+    android:background="@color/c_F5F8FA"
     android:orientation="vertical">
 
-  <!--  <fashionlife.com.base.ui.BaseListView
-        android:id="@+id/lv"
-        android:layout_width="match_parent"
-        android:listSelector="@android:color/transparent"
-        android:layout_height="match_parent"></fashionlife.com.base.ui.BaseListView>-->
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent"
+        android:background="@color/c_F5F8FA"></android.support.v7.widget.RecyclerView>
 
 </com.jwenfeng.library.pulltorefresh.PullToRefreshLayout>
