--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -12,6 +12,8 @@
         android:id="@+id/view_pager_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:line_height="0"
+        app:selectedTextViewColor="@color/c_2e77fb"
         app:background_content_color="@color/c_fafafa" />
 
     <android.support.v4.view.ViewPager
