--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,5 +26,8 @@
     <color name="c_2e77fb">#2e77fb</color>
     <color name="c_000000">#000000</color>
     <color name="c_F5F8FA">#F5F8FA</color>
+    <color name="c_7c7c7c">#7C7C7C</color>
+    <color name="c_ea6f5a">#ea6f5a</color>
+    <color name="c_ec614a">#ec614a</color>
 
 </resources>
