--- a/app/src/main/res/layout/fragment_user_layout.xml
+++ b/app/src/main/res/layout/fragment_user_layout.xml
@@ -19,39 +19,43 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:paddingLeft="@dimen/dip10"
+            android:paddingRight="@dimen/dip10"
+            android:orientation="horizontal">
+
 
             <TextView
-                android:id="@+id/textView"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:text=""/>
-
-            <Button
                 android:id="@+id/selectImage"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="选择图片"
-                />
+                android:clickable="true"
+                android:drawableTop="@mipmap/select_icon"
+                android:text="选择图片"/>
 
-            <Button
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1"/>
+
+            <TextView
                 android:id="@+id/uploadImage"
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="上传图片"
+                android:clickable="true"
+                android:drawableTop="@mipmap/find_icon"
+                android:text="百度识图"
                 />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                />
 
         </LinearLayout>
 
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            />
+
     </LinearLayout>
-
-
 
 
 </fashionlife.com.widget.HeadZoomScrollView>
