--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="splashTheme" parent="@android:style/Theme.Light.NoTitleBar">
+    <style name="splashTheme" parent="Theme.AppCompat">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
     </style>
 
-    <style name="defaultTheme" parent="@android:style/Theme.Light.NoTitleBar">
+    <style name="defaultTheme" parent="Theme.AppCompat">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@color/c_f6f6f6</item>
     </style>
 
-    <style name="transparentTheme" parent="@android:style/Theme.Light.NoTitleBar">
+    <style name="transparentTheme" parent="Theme.AppCompat">
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowBackground">@android:color/transparent</item>
