--- a/app/src/main/res/layout/fragment_user_layout.xml
+++ b/app/src/main/res/layout/fragment_user_layout.xml
@@ -14,6 +14,7 @@
             android:id="@+id/iv_head"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:clickable="true"
             android:scaleType="centerCrop"/>
 
         <LinearLayout
